--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@babel/preset-env": "^7.7.4",
     "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.1",
     "formik": "^2.0.3",
     "http-proxy-middleware": "^0.20.0",
