--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,12 @@
     "react-scripts": "3.2.0",
     "sass-loader": "^8.0.0",
     "semantic-ui-react": "^0.88.1",
+    "serve": "^11.2.0",
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
