--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
